--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -23,5 +23,6 @@ jobs:
         uses: helm/chart-releaser-action@v1.1.0
         with:
           charts_dir: chart
+          charts_repo_url: https://seal-devmania.github.io/helm-chart          
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
