--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -25,7 +25,8 @@ jobs:
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.5.0
         with:
-          charts_dir: chart
-          charts_repo_url: https://seal-devmania.github.io/helm-chart          
+          charts_repo_url: https://seal-devmania.github.io/helm-chart
+          token: ${{ secrets.GITHUB_TOKEN }}
+          
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
