--- a/charts/orki/templates/secret-core.yaml
+++ b/charts/orki/templates/secret-core.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: orki-core-secret
+  name: orki-back-secret
 data:
 {{- range $key, $value := .Values.coreSecretData }}
   {{ $key }}: {{ $value | b64enc }}
