--- a/charts/orki/templates/secret-core.yaml
+++ b/charts/orki/templates/secret-core.yaml
@@ -3,7 +3,7 @@ kind: Secret
 metadata:
   name: orki-back-secret
 data:
-{{- range $key, $value := .Values.coreSecretData }}
+{{- range $key, $value := .Values.backSecretData }}
   {{ $key }}: {{ $value | b64enc }}
 {{- end }}
   
