feat(mongodb): Adiciona o mongodb

--- a/charts/orki/templates/mongodb/mongodb-deployment.yaml
+++ b/charts/orki/templates/mongodb/mongodb-deployment.yaml
@@ -61,5 +61,5 @@ spec:
       volumes:
       - name: "mongo-data-dir"
         persistentVolumeClaim:
-          claimName: "orki-mongodb"
+          claimName: "orki-mongodb-pvc"
 {{- end}}
