--- a/charts/orki/templates/mongodb/mongodb-pvc.yaml
+++ b/charts/orki/templates/mongodb/mongodb-pvc.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: orki-mongodb-data
+  name: orki-mongodb-pvc
 spec:
   accessModes:
     - ReadWriteOnce 
