--- a/charts/orki/templates/mongodb/mongodb-pv.yaml
+++ b/charts/orki/templates/mongodb/mongodb-pv.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: orki-mongodb-data-pv
+  name: orki-mongodb-pv
 spec:
   accessModes:
     - ReadWriteOnce
