feat(mongodb): Adiciona o mongodb

--- a/charts/orki/values.yaml
+++ b/charts/orki/values.yaml
@@ -35,10 +35,9 @@ serviceAccount:
 mongodb:
   standalone: false
   imageTag: 5.0.14-focal
-  database: db
 
 backSecretData:
-  MONGO_URI: "mongodb://adminuser:password123@orki-mongodb:27017/db"
+  MONGO_URI: "mongodb://adminuser:password123@orki-mongodb:27017/test"
 
 backConfigMapData:
   JSON_REQUEST_LIMIT: "100kb"
