--- a/charts/orki/templates/deployment-browserless.yaml
+++ b/charts/orki/templates/deployment-browserless.yaml
@@ -16,6 +16,27 @@ spec:
       - name: browserless
         image: browserless/chrome
         imagePullPolicy: Always
+        livenessProbe:
+          httpGet:
+            path: /
+            port: 3000
+            scheme: HTTP
+          periodSeconds: 10
+          successThreshold: 1
+          timeoutSeconds: 1
+          failureThreshold: 3
+          initialDelaySeconds: 5
+                  
+        readinessProbe:
+          httpGet:
+            path: /
+            port: 3000
+            scheme: HTTP
+          periodSeconds: 10
+          successThreshold: 1
+          timeoutSeconds: 1
+          failureThreshold: 3
+          initialDelaySeconds: 5
 
         resources:
           requests:
