--- a/charts/orki/templates/deployment-core.yaml
+++ b/charts/orki/templates/deployment-core.yaml
@@ -17,23 +17,23 @@ spec:
         imagePullPolicy: Always
         livenessProbe:
           httpGet:
-            path: /core-docker/liveness
+            path: /core-docker/liveness?livenessProbe
             port: 7777
             scheme: HTTP
+          initialDelaySeconds: 2
           periodSeconds: 10
           successThreshold: 1
           timeoutSeconds: 5
           failureThreshold: 3
-          initialDelaySeconds: 10
         
         readinessProbe:
-          failureThreshold: 3
-          initialDelaySeconds: 10
+          initialDelaySeconds: 2
           periodSeconds: 10
           successThreshold: 1
           timeoutSeconds: 5
+          failureThreshold: 3
           httpGet:
-            path: /core-docker/liveness
+            path: /core-docker/liveness?readinessProbe
             port: 7777
             scheme: HTTP
             
