fix(browserless): Adiciona heathcheck

--- a/charts/orki/templates/deployment-core.yaml
+++ b/charts/orki/templates/deployment-core.yaml
@@ -17,7 +17,7 @@ spec:
         imagePullPolicy: Always
         livenessProbe:
           httpGet:
-            path: /core-docker/liveness?livenessProbe
+            path: /core-docker/liveness
             port: 7777
             scheme: HTTP
           initialDelaySeconds: 2
@@ -33,7 +33,7 @@ spec:
           timeoutSeconds: 5
           failureThreshold: 3
           httpGet:
-            path: /core-docker/liveness?readinessProbe
+            path: /core-docker/liveness
             port: 7777
             scheme: HTTP
             
