--- a/charts/orki/values.yaml
+++ b/charts/orki/values.yaml
@@ -38,8 +38,13 @@ mongodb:
 
 backSecretData:
   MONGO_URI: "mongodb://adminuser:password123@orki-mongodb:27017/admin"
+  AWS_ACCESS_KEY_ID: "aws_access_key_id"
+  AWS_SECRET_ACCESS_KEY: "aws_secret_access_key"
 
 backConfigMapData:
+  MONGO_ARGS: "--ssl"
+  S3_ARGS: "--endpoint=https://sfo3.digitaloceanspaces.com"
+  S3_BUCKET: "my-bucket"
   JSON_REQUEST_LIMIT: "100kb"
 
 frontConfigMapData:
