--- a/charts/orki/templates/hpa.yaml
+++ b/charts/orki/templates/hpa.yaml
@@ -1,4 +1,4 @@
-apiVersion: autoscaling/v2beta2
+apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
   name: orki-worker-hpa
@@ -11,7 +11,7 @@ spec:
   maxReplicas: {{ .Values.worker.maxReplicas }}
 
 ---
-apiVersion: autoscaling/v2beta2
+apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
   name: orki-core-hpa
