--- a/charts/orki/templates/cronjob-backup-s3.yaml
+++ b/charts/orki/templates/cronjob-backup-s3.yaml
@@ -8,6 +8,10 @@ spec:
     spec:
       template:
         spec:
+          {{- with .Values.nodeSelector }}
+          nodeSelector:
+            {{- toYaml . | nindent 8 }}
+          {{- end }}
           containers:
           - name: backup-s3
             image: willguitaradmfar/mongo-backup-s3:latest
