--- a/charts/orki/templates/deployment-core.yaml
+++ b/charts/orki/templates/deployment-core.yaml
@@ -11,6 +11,10 @@ spec:
       labels:
         app: orki-core
     spec:
+      {{- with .Values.nodeSelector }}
+      nodeSelector:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
       containers:
       - name: core
         image: "{{ .Values.imageBack.repository }}:{{ .Values.imageBack.tag }}"
