--- a/charts/orki/templates/deployment-front.yaml
+++ b/charts/orki/templates/deployment-front.yaml
@@ -12,6 +12,10 @@ spec:
       labels:
         app: orki-front
     spec:
+      {{- with .Values.nodeSelector }}
+      nodeSelector:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
       containers:
       - name: front        
         image: "{{ .Values.imageFront.repository }}:{{ .Values.imageFront.tag }}"
