--- a/charts/orki/templates/deployment-mqtt.yaml
+++ b/charts/orki/templates/deployment-mqtt.yaml
@@ -12,6 +12,10 @@ spec:
       labels:
         app: orki-mqtt
     spec:
+      {{- with .Values.nodeSelector }}
+      nodeSelector:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
       containers:
       - name: mqtt
         image: eclipse-mosquitto:1.6
