--- a/charts/orki/templates/deployment-redis.yaml
+++ b/charts/orki/templates/deployment-redis.yaml
@@ -12,6 +12,10 @@ spec:
       labels:
         app: orki-redis
     spec:
+      {{- with .Values.nodeSelector }}
+      nodeSelector:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
       containers:
       - name: redis
         image: redis
