--- a/charts/orki/templates/deployment-core.yaml
+++ b/charts/orki/templates/deployment-core.yaml
@@ -66,7 +66,7 @@ spec:
         - name: ORKI_SCHEDULES
           value: "no"
         - name: ORKI_QUEUES
-          value: "VIEWS_MANAGEMENT_UPDATE_MODELS"
+          value: "VIEWS_MANAGEMENT_UPDATE_MODELS,CORE_SCRIPT_PUBLISHED"
         - name: WAIT_FOR_HOSTS
           value: "orki-redis-service:6379;orki-rabbitmq-service:5672;orki-mqtt-service:1883"
 
