--- a/charts/orki/templates/deployment-core.yaml
+++ b/charts/orki/templates/deployment-core.yaml
@@ -29,7 +29,6 @@ spec:
           successThreshold: 1
           timeoutSeconds: 5
           failureThreshold: 3
-        
         readinessProbe:
           initialDelaySeconds: 2
           periodSeconds: 10
@@ -40,7 +39,6 @@ spec:
             path: /core-docker/liveness
             port: 7777
             scheme: HTTP
-            
         resources:
           requests:
             cpu: 200m
@@ -69,4 +67,11 @@ spec:
           value: "VIEWS_MANAGEMENT_UPDATE_MODELS,CORE_SCRIPT_PUBLISHED,CORE_RUNTIME_PUBLISHED"
         - name: WAIT_FOR_HOSTS
           value: "orki-redis-service:6379;orki-rabbitmq-service:5672;orki-mqtt-service:1883"
+        volumeMounts:
+        - name: orki-runtime-modules
+          mountPath: /tmp/orki_runtime_modules
 
+      volumes:
+      - name: orki-runtime-modules
+        persistentVolumeClaim:
+          claimName: orki-runtime-modules-pvc
