--- a/charts/orki/templates/deployment-worker.yaml
+++ b/charts/orki/templates/deployment-worker.yaml
@@ -76,3 +76,11 @@ spec:
         - name: WAIT_FOR_HOSTS
           value: "orki-redis-service:6379;orki-rabbitmq-service:5672;orki-mqtt-service:1883"
 
+        volumeMounts:
+        - name: orki-runtime-modules
+          mountPath: /tmp/orki_runtime_modules
+
+      volumes:
+      - name: orki-runtime-modules
+        persistentVolumeClaim:
+          claimName: orki-runtime-modules-pvc
