--- a/charts/orki/templates/pvc.yaml
+++ b/charts/orki/templates/pvc.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: orki-runtime-modules-pvc
+  name: orki-runtime-bundle-pvc
 spec:
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   resources:
     requests:
       storage: 1Gi
