feat(helm): Adiciona schedule no core

--- a/charts/orki/templates/pvc.yaml
+++ b/charts/orki/templates/pvc.yaml
@@ -1,4 +1,21 @@
 apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: orki-runtime-bundle-pv
+spec:
+  capacity:
+    storage: 1Gi
+  accessModes:
+    - ReadWriteMany
+  nfs:
+    path: {{ .Values.nfs.path }}
+    server: {{ .Values.nfs.server }}
+  persistentVolumeReclaimPolicy: Retain
+  storageClassName: ""
+
+---
+
+apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: orki-runtime-bundle-pvc
@@ -8,3 +25,4 @@ spec:
   resources:
     requests:
       storage: 1Gi
+  storageClassName: ""
