--- a/charts/orki/templates/services.yaml
+++ b/charts/orki/templates/services.yaml
@@ -1,6 +1,22 @@
 apiVersion: v1
 kind: Service
 metadata:
+  name: orki-publish-service
+  labels:
+    prometheus: scraping
+spec:  
+  ports:
+  - name: http
+    port: 80
+    targetPort: 7777
+  selector:
+    app: orki-publish
+
+---
+
+apiVersion: v1
+kind: Service
+metadata:
   name: orki-core-service
   labels:
     prometheus: scraping
