--- a/charts/orki/templates/pvc.yaml
+++ b/charts/orki/templates/pvc.yaml
@@ -1,3 +1,5 @@
+{{- if .Values.nfs.enabled }}
+
 apiVersion: v1
 kind: PersistentVolume
 metadata:
@@ -26,3 +28,5 @@ spec:
     requests:
       storage: 1Gi
   storageClassName: ""
+
+{{- end }}
