--- a/charts/orki/templates/deployment-worker.yaml
+++ b/charts/orki/templates/deployment-worker.yaml
@@ -10,6 +10,10 @@ spec:
     metadata:
       labels:
         app: orki-worker
+      annotations:
+        prometheus.io/scrape: "true"
+        prometheus.io/port: "7777"
+        prometheus.io/path: "/metrics"
     spec:
       {{- with .Values.nodeSelector }}
       nodeSelector:
