--- a/charts/orki/templates/prometheus/config-map.yaml
+++ b/charts/orki/templates/prometheus/config-map.yaml
@@ -5,12 +5,15 @@ metadata:
 data:
   prometheus.yml: |
     global:
-      scrape_interval: {{ .Values.prometheus.scrape_interval }}
+      scrape_interval: 5s
 
     scrape_configs:
       - job_name: 'kubernetes-pods'
         kubernetes_sd_configs:
           - role: pod
+            namespaces:
+              names:
+                - {{ .Values.namespace | default .Release.Namespace }}
         relabel_configs:
           - source_labels: [__meta_kubernetes_pod_annotation_prometheus_io_scrape]
             action: keep
@@ -19,7 +22,8 @@ data:
             action: replace
             target_label: __metrics_path__
             regex: (.+)
-          - source_labels: [__address__, __meta_kubernetes_pod_annotation_prometheus_io_port]
+          - source_labels: [__meta_kubernetes_pod_ip, __meta_kubernetes_pod_annotation_prometheus_io_port]
             action: replace
             target_label: __address__
-            regex: (.+):(?:\d+);(.+)
+            regex: (.+);(.+)
+            replacement: "$1:$2"  # Configura o endereço e a porta com base nas anotações
