feat(grafana): Adiciona domain config

--- a/charts/orki/templates/prometheus/deployment-grafana.yaml
+++ b/charts/orki/templates/prometheus/deployment-grafana.yaml
@@ -17,3 +17,11 @@ spec:
           image: grafana/grafana:latest
           ports:
             - containerPort: 3000
+          volumeMounts:
+            - name: grafana-config-volume
+              mountPath: /etc/grafana/grafana.ini
+              subPath: grafana.ini
+      volumes:
+        - name: grafana-config-volume
+          configMap:
+            name: grafana-config
