--- a/charts/orki/templates/prometheus/config-map.yaml
+++ b/charts/orki/templates/prometheus/config-map.yaml
@@ -27,3 +27,15 @@ data:
             target_label: __address__
             regex: (.+);(.+)
             replacement: "$1:$2"  # Configura o endereço e a porta com base nas anotações
+
+
+---
+
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: grafana-config
+data:
+  grafana.ini: |
+    [server]
+    domain = {{ .Values.prometheus.domain }}
