--- a/charts/orki/values.yaml
+++ b/charts/orki/values.yaml
@@ -67,6 +67,9 @@ backConfigMapData:
   S3_BUCKET: "my-bucket"
   JSON_REQUEST_LIMIT: "100kb"
 
+docsConfigMapData:
+  TITLE: "Orki"
+
 backup:
   cron: "0 */6 * * *" # every 6 hours
 
