--- a/charts/orki/templates/cronjob-backup-s3.yaml
+++ b/charts/orki/templates/cronjob-backup-s3.yaml
@@ -1,3 +1,5 @@
+{{- if .Values.backup.enabled }}
+
 apiVersion: batch/v1
 kind: CronJob
 metadata:
@@ -18,3 +20,5 @@ spec:
             - secretRef:
                 name: orki-back-secret
           restartPolicy: OnFailure
+
+{{- end }}
